--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-Flask==2.0.3
-pandas==1.3.3
-sqlalchemy==1.4.22
-pyodbc==4.0.32
-python-dotenv==0.19.1
-gunicorn==20.1.0
+Flask==2.3.2
+SQLAlchemy==2.0.21
+pyodbc==4.0.39
+gunicorn==21.2.0
